[Payments] Record navigations that close the Payment Request as aborts.

BUG=717757

Review-Url: https://codereview.chromium.org/2870153002
Cr-Commit-Position: refs/heads/master@{#472514}

Former-commit-id: 2c8558a602d83dbb979c30e6a18d271502b951fa